<resources>
    <string name="app_name">BaseFrame</string>
    <string name="home">首页</string>
    <string name="news">资讯</string>
    <string name="program">项目</string>
    <string name="mine">我的</string>
    <string name="grade">等级:</string>
    <string name="rank">排名:</string>
    <string name="my_coin">我的积分</string>
    <string name="my_collection">我的收藏</string>
    <string name="read_later">稍后阅读</string>
    <string name="open_program">开源项目</string>
    <string name="about_author">关于作者</string>
    <string name="system_setting">系统设置</string>
    <string name="login_in">登录</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="please_input_password">请输入验证码</string>
</resources>
