<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never"
        >
    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/withe"
        >
        <!--首页-->
        <LinearLayout
            android:id="@+id/home_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/home_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_home_page"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />


        </LinearLayout>
        <!--资讯-->
        <LinearLayout
            android:id="@+id/news_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/news_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_news"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />


        </LinearLayout>
        <!--项目-->
        <LinearLayout
            android:id="@+id/program_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/program_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_program"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />


        </LinearLayout>
        <!--我的-->
        <LinearLayout
            android:id="@+id/mine_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/mine_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_mine"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="2dp"
                />


        </LinearLayout>
    </LinearLayout>


</FrameLayout>