<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/withe"
    >
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh_mine"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.scwang.smartrefresh.header.DeliveryHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:id="@+id/user_info_rl"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/background"
                >
                <!--头像-->
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/riv_user_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:background="@color/withe"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="80dp"
                    app:riv_mutate_background="true"
                    />

                <!--名称-->
                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/riv_user_icon"
                    android:layout_centerHorizontal="true"
                    android:text="BigZing"
                    android:layout_marginTop="2dp"
                    android:textSize="15sp"
                    android:textColor="@color/withe"
                    />

                <!--ID-->
                <TextView
                    android:id="@+id/user_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name_tv"
                    android:layout_centerHorizontal="true"
                    android:text="ID:...."
                    android:textSize="12sp"
                    android:textColor="@color/withe"
                    android:layout_marginTop="8dp"
                    />

                <!--等级和排名-->
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/user_id_tv"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    >
                    <!--等级-->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:id="@+id/grade_show_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/grade"
                            android:textColor="@color/withe"
                            android:gravity="center"
                            android:layout_centerVertical="true"
                            android:textSize="15sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            />
                        <TextView
                            android:id="@+id/grade_number_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/grade_show_tv"
                            android:layout_toRightOf="@+id/grade_show_tv"
                            android:text="17"
                            android:textColor="@color/withe"
                            android:textSize="12sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            />

                    </RelativeLayout>

                    <!--排名-->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:id="@+id/rank_show_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rank"
                            android:gravity="center"
                            android:layout_centerVertical="true"
                            android:textSize="15sp"
                            android:textColor="@color/withe"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            />
                        <TextView
                            android:id="@+id/rank_number_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/rank_show_tv"
                            android:layout_toRightOf="@+id/rank_show_tv"
                            android:text="71"
                            android:textColor="@color/withe"
                            android:textSize="12sp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            />

                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                >
                <!--我的积分-->
                <RelativeLayout
                    android:id="@+id/my_coin_rl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >

                    <ImageView
                        android:id="@+id/my_coin_iv"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_coin"
                        android:tint="@color/background"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_coin"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_toRightOf="@id/my_coin_iv"
                        android:layout_toEndOf="@id/my_coin_iv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/icon_next"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:tint="@color/background"
                        />

                </RelativeLayout>

                <!--我的收藏-->
                <RelativeLayout
                    android:id="@+id/my_collection_rl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/my_collection_iv"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_collect"
                        android:tint="@color/background"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_collection"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_toRightOf="@id/my_collection_iv"
                        android:layout_toEndOf="@id/my_collection_iv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/icon_next"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:tint="@color/background"
                        />

                </RelativeLayout>

                <!--稍后阅读-->
                <RelativeLayout
                    android:id="@+id/read_later_rl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/read_later_iv"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_read_later"
                        android:tint="@color/background"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_later"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_toRightOf="@id/read_later_iv"
                        android:layout_toEndOf="@id/read_later_iv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/icon_next"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:tint="@color/background"
                        />


                </RelativeLayout>

                <!--开源项目-->
                <RelativeLayout
                    android:id="@+id/open_program_rl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/open_program_iv"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_github"
                        android:tint="@color/background"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_program"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_toRightOf="@id/open_program_iv"
                        android:layout_toEndOf="@id/open_program_iv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/icon_next"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:tint="@color/background"
                        />

                </RelativeLayout>

                <!--关于作者-->
                <RelativeLayout
                    android:id="@+id/about_author_rl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/about_author_iv"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_about"
                        android:tint="@color/background"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_toRightOf="@id/about_author_iv"
                        android:layout_toEndOf="@id/about_author_iv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/icon_next"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:tint="@color/background"
                        />
                </RelativeLayout>

                <!--系统设置-->
                <RelativeLayout
                    android:id="@+id/system_setting_rl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/system_setting_iv"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_setting"
                        android:tint="@color/background"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/system_setting"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_toRightOf="@id/system_setting_iv"
                        android:layout_toEndOf="@id/system_setting_iv"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        />
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/icon_next"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:tint="@color/background"
                        />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>